BUGFIX: fixed treedropdownfield cropping long names off
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@76435 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/layout.css
+++ b/css/layout.css
@@ -540,6 +540,9 @@ iframe {
 	border-right: none;
 	overflow: hidden;
 }
+	#contentPanel div.TreeDropdownField a {
+		overflow: visible;
+	}
 #contentPanel .thumbnailstrip {
 	border: none;
 	width: 190px;
